as_action: make it work on slideout page

--- a/views/themes/activities/actions/edit/5.activities.tmpl
+++ b/views/themes/activities/actions/edit/5.activities.tmpl
@@ -1,3 +1,8 @@
+<script type="text/javascript">
+  $(document).ready(function() {
+    QorActivity.init();
+  });
+</script>
 <div id="qor-activity">
   <div class="qor-tabs-template" style="display:none;">
     <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
@@ -22,7 +27,7 @@
 
         <form action="{{edit_resource_path .Result .Resource}}/!activity" method="POST">
           <input type="hidden" name="type" value="tag">
-          <input type="hidden" name="redirect_to" value="{{edit_resource_path .Result .Resource}}#activity-panel">
+          <input type="hidden" name="redirect_to" value="{{edit_resource_path .Result .Resource}}#activity">
           <input type="string" name="comment" value="">
           <button>Submit</button>
         </form>
@@ -38,7 +43,7 @@
 
         <form action="{{edit_resource_path .Result .Resource}}/!activity" method="POST">
           <input type="hidden" name="type" value="comment">
-          <input type="hidden" name="redirect_to" value="{{edit_resource_path .Result .Resource}}#activity-panel">
+          <input type="hidden" name="redirect_to" value="{{edit_resource_path .Result .Resource}}#activity">
           <input type="string" name="comment" value="">
           <button>Submit</button>
         </form>
