--- a/views/themes/activities/assets/stylesheets/activities.css
+++ b/views/themes/activities/assets/stylesheets/activities.css
@@ -4,3 +4,9 @@
   background-color: #fff;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
 }
+
+.qor-slideout .qor-activity-container {
+  padding: 0px;
+  margin: 20px 0px;
+  box-shadow: none;
+}
