--- a/views/themes/activities/actions/edit/5.activities.tmpl
+++ b/views/themes/activities/actions/edit/5.activities.tmpl
@@ -1,9 +1,10 @@
-<script type="text/javascript">
-  $(document).ready(function() {
-    QorActivity.init();
-  });
-</script>
-<div id="qor-activity">
+<div id="qor-activity" style="display:none;">
+  <script type="text/javascript">
+    $(document).ready(function() {
+      QorActivity.init();
+    });
+  </script>
+
   <div class="qor-tabs-template" style="display:none;">
     <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
       <div class="mdl-tabs__tab-bar">
