--- a/views/themes/activities/actions/edit/5.activities.tmpl
+++ b/views/themes/activities/actions/edit/5.activities.tmpl
@@ -19,17 +19,19 @@
   <div class="qor-tabs-panel-template" style="display:none;">
     <div class="mdl-tabs__panel qor-activity-container" id="activity-panel">
       <div class="qor-activities-history">
-        <label class="qor-field__label">{{dt (printf "%v.attributes.activity.History" .Resource.ToParam) "Activities"}}</label>
-        <ul>
-          {{range $activity := get_activities . "-tag"}}
-            <li>
-              <div>{{$activity.UpdatedBy}}{{$activity.Subject}}</div>
-              <div>{{$activity.UpdatedAt}}</div>
-              <div>{{$activity.Context}}</div>
-              <div>Note: {{$activity.Note}}</div>
-            </li>
-          {{end}}
-        </ul>
+        <label class="qor-field__label" style="font-size: 16px; font-weight: bold;">{{dt (printf "%v.attributes.activity.History" .Resource.ToParam) "Activities"}}</label>
+        {{range $activity := get_activities . "-tag"}}
+          <div style="background-color: rgb(242, 242, 242);padding: 10px 20px; margin: 10px 0px;border-radius: 5px;width: 80%">
+            <div style="font-size: 16px;">
+              <b>{{$activity.UpdatedBy}}</b> {{$activity.Subject}}
+            </div>
+            <div style="color: rgb(185, 185, 185); font-size: 14px;margin-bottom: 8px;">
+              {{formatted_datetime $activity.UpdatedAt}}
+            </div>
+            <div style="margin-bottom: 10px;">{{$activity.Content}}</div>
+            <div><b>Note:</b> {{$activity.Note}}</div>
+          </div>
+        {{end}}
 
         <form action="{{edit_resource_path .Result .Resource}}/!activity" method="POST">
           <input type="hidden" name="type" value="activity">
