--- a/views/themes/activities/actions/5.activities.tmpl
+++ b/views/themes/activities/actions/5.activities.tmpl
@@ -25,11 +25,11 @@
         <label class="qor-field__label" style="font-size: 16px; font-weight: bold;">{{dt "activity.Activities" "Activities"}}</label>
         {{range $activity := get_activities . "-tag"}}
           <div class="qor-js-activity-item" style="background-color: rgb(242, 242, 242);padding: 10px 20px; margin: 10px 0px;border-radius: 5px;width: 80%">
-            <form action="{{edit_resource_path $activity activity_resource}}/!custom" method="POST">
+            <form action="/admin/{{$resource.ToParam}}/{{$result.ID}}/!{{activity_resource.ToParam}}/{{$activity.ID}}/edit" method="POST">
               <input type="hidden" name="QorResource.ID" value="{{$activity.ID}}">
               <input type="hidden" name="redirect_to" value="{{edit_resource_path $result $resource}}#activity">
               <div style="font-size: 16px;">
-                <b>{{$activity.UpdatedBy}}</b> {{dt (printf "activity.%v" $activity.Action) $activity.Action }}
+                <b>{{$activity.CreatorName}}</b> {{dt (printf "activity.%v" $activity.Action) $activity.Action }}
               </div>
               <div style="color: rgb(185, 185, 185); font-size: 14px;margin-bottom: 8px;">
                 {{formatted_datetime $activity.UpdatedAt}}
@@ -54,7 +54,7 @@
 
       <div class="qor-activities-new" style="margin-top: 30px;">
         <label class="qor-field__label" style="font-size: 16px; font-weight: bold;">{{dt "activity.NewActivity" "Post a new activity"}}</label>
-        <form action="{{edit_resource_path .Result .Resource}}/!activity" method="POST">
+        <form action="/admin/{{$resource.ToParam}}/{{$result.ID}}/!{{activity_resource.ToParam}}" method="POST">
           {{render_form new_activity (edit_sections activity_resource) }}
           <input type="hidden" name="redirect_to" value="{{edit_resource_path .Result .Resource}}#activity">
           <div class="qor-form__actions">
