--- a/views/themes/activity/actions/5.activity.tmpl
+++ b/views/themes/activity/actions/5.activity.tmpl
@@ -5,42 +5,12 @@
 <header class="mdl-layout__header mdl-layout--fixed-tabs qor-tab-bar--activity-header">
   <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
     <a href="#scroll-tab-form" class="mdl-layout__tab is-active">Orders</a>
-    <a href="#scroll-tab-activity" class="mdl-layout__tab">Activity</a>
+    <a href="#scroll-tab-activity" class="mdl-layout__tab qor-tab__activity" data-action-id={{$result.ID}}>Activity</a>
   </div>
 </header>
 
 <div class="mdl-layout__tab-panel" id="scroll-tab-activity" data-toggle="qor.activity">
-
-  <div class="qor-activity__lists">
-    {{range $activity := get_activities . "-tag"}}
-      <div class="qor-activity__list">
-        <form class="qor-activity__edit-note_form" action="/admin/{{$resource.ToParam}}/{{$result.ID}}/!{{activity_resource.ToParam}}/{{$activity.ID}}/edit" method="POST">
-          <input type="hidden" name="QorResource.ID" value="{{$activity.ID}}">
-          <div class="qor-activity__list-title">
-            <strong>{{$activity.CreatorName}}</strong> <span>{{dt (printf "activity.%v" $activity.Action) $activity.Action }}</span>
-          </div>
-          <div class="qor-activity__list-date">
-            {{formatted_datetime $activity.UpdatedAt}}
-          </div>
-          <div class="qor-activity__list-content">{{formatted_content $activity.Content}}</div>
-            <strong>Note:</strong>
-            <span class="qor-activity__list-note">
-              {{$activity.Note}}
-            </span>
-            <a class="mdl-button mdl-js-button mdl-button--icon qor-activity__edit-button" href="#">
-              <i class="material-icons md-18 qor-activity__edit-button">edit</i>
-            </a>
-
-            <div class="mdl-textfield mdl-js-textfield qor-activity__edit-feilds">
-              <label class="mdl-textfield__label">{{$activity.Note}}</label>
-              <input class="mdl-textfield__input" type="text" name="QorResource.Note">
-            </div>
-
-            <button class="qor-activity__edit-save-button" type="submit"><i class="material-icons md-24">save</i></button>
-        </form>
-      </div>
-    {{end}}
-  </div>
+  <div class="qor-activity__lists"><div class="mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active"></div></div>
   <div class="qor-activities__new">
     <h4 class="qor-section-title">{{dt "activity.NewActivity" "Post a new activity"}}</h4>
     <form class="qor-activity__new-note_form" action="/admin/{{$resource.ToParam}}/{{$result.ID}}/!{{activity_resource.ToParam}}" method="POST">
