--- a/views/themes/activity/assets/stylesheets/scss/activity.scss
+++ b/views/themes/activity/assets/stylesheets/scss/activity.scss
@@ -1,8 +1,24 @@
+.qor-slideout__body .mdl-layout__container{
+    position: static;
+}
 .qor-sliderout__activity-container{
     margin: -16px -24px;
+    width: auto;
+    .mdl-layout__tab-bar{
+        height: auto;
+    }
+    .mdl-layout__tab-bar-button{
+        display: none;
+    }
+    .mdl-layout__tab-bar{
+        width: 100%;
+    }
 }
 .qor-slideout--activity-content{
-    padding: 16px 24px;
+    width: 100%;
+    .mdl-layout__tab-panel{
+        padding: 16px 24px;
+    }
 }
 .qor-tab-bar--activity-header{
     min-height: 56px;
