fix note doesn't show exist value when click 'edit'

--- a/views/themes/activity/actions/5.activity.tmpl
+++ b/views/themes/activity/actions/5.activity.tmpl
@@ -42,8 +42,7 @@
             </a>
 
             <div class="mdl-textfield mdl-js-textfield qor-activity__edit-feilds">
-              <label class="mdl-textfield__label">[[ Note ]]</label>
-              <input class="mdl-textfield__input" type="text" name="QorResource.Note">
+              <input class="mdl-textfield__input" type="text" name="QorResource.Note" value="[[ Note ]]">
             </div>
             <button class="qor-activity__edit-save-button" type="submit"><i class="material-icons md-24">save</i></button>
         </form>
