--- a/views/themes/activity/assets/stylesheets/scss/activity.scss
+++ b/views/themes/activity/assets/stylesheets/scss/activity.scss
@@ -49,30 +49,46 @@
     }
     .qor-activity__edit-button{
         position: absolute;
-        bottom: 6px;
+        bottom: 16px;
         right: 16px;
     }
     .qor-activity__list-content{
         margin-top: 16px;
         font-size: 14px;
+        margin-bottom: 14px;
     }
     .qor-activity__edit-save-button{
         border: 0;
         background: none;
         display: none;
+        cursor: pointer;
+        position: absolute;
+        bottom: 16px;
+        right: 16px;
     }
     .qor-activity__edit-feilds{
-        padding: 0;
         width: calc(100% - 77px);
         display: none;
         input{
-            font-size: 12px;
+            font-size: 14px;
+            font-family: "Roboto", "Helvetica", "Arial", sans-serif;
         }
+    }
+    .qor-activity__list-note {
+        padding-top: 3px;
+        padding-bottom: 4px;
+        display: inline-block;
     }
     .show{
         display: inline-block;
     }
     .hide{
         display: none;
+    }
+    .mdl-textfield {
+      padding: 0px;
+    }
+    .mdl-textfield__label:after {
+        bottom: 0px;
     }
 }
