make new note as string

--- a/views/themes/activity/actions/5.activity.tmpl
+++ b/views/themes/activity/actions/5.activity.tmpl
@@ -34,7 +34,7 @@
       </div>
       <div class="qor-activity__list-content">[[ &Content ]]</div>
       <div>
-        <strong>Note:</strong>
+        <strong>{{t "activity.note" "Note:"}}</strong>
         <span class="qor-activity__list-note">
           [[ Note ]]
         </span>
